--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h2>❤️Favorite</h2>
     <p>⚽️ <a href="https://www.yamaga-fc.com/">Matsumoto Yamaga F.C.</a></p>
     <p>🏢 <a href="https://www.apple.com/jp/">Apple</a></p>
-    <p>👨 <a href="https://www.togi.co.jp/">Toyogiken "TOGI"</a></a></p>
+    <p>👨 <a href="https://www.togi.co.jp/">Toyogiken "TOGI"</a></p>
 </body>
 </html>
