サービス紹介文

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>KOCHAN0610</title>
+    <meta name="description" content="これから様々なサービスを展開していく予定のKOCHAN0610のトップページ"/>
 </head>
 <body>
     <h1>KOCHAN0610</h1>
