script of dervy

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>この動画は以前放送されていたAppleの日本オリジナルCMシリーズ「Macの向こうから」の新海誠監督版です。<br>新海誠監督のルーツや大切にしているところが紹介されていて、創作意欲が掻き立てられるような作品となっています。</p>
     <h3>yamaga-fc</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/J6qOE7MRQ40?si=n3ib3blZG7kRwCwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h4>信州ダービー2024煽りV</h4>
+    <h4>信州ダービー2024煽りVTR</h4>
     <p>結果は不甲斐ないもので、引き分けとなってしまいましたが、クラブとしての覚悟を表したビデオだと思います。<br>次のアウェイ戦は勝てるようにファン・サポーター、クラブ、選手が一体となって戦いましょう！<b>OneSoul!</b></p>
 </body>
 </html>
