--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/J6qOE7MRQ40?si=n3ib3blZG7kRwCwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h4>信州ダービー2024煽りVTR</h4>
     <p>結果は不甲斐ないもので、引き分けとなってしまいましたが、クラブとしての覚悟を表したビデオだと思います。<br>次のアウェイ戦は勝てるようにファン・サポーター、クラブ、選手が一体となって戦いましょう！<b>OneSoul!</b></p>
+    <h2>Contact</h2>
+    <p><a href="mailto:kokog0610@gmail.com?subject=【Github-main】">kokog0610@gmail.com</a>へ件名に【Github-main】をつけてメールを送信してください。</p>
 </body>
 </html>
