--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="utf-8"/>
     <title>KOCHAN0610</title>
     <meta name="description" content="これから様々なサービスを展開していく予定のKOCHAN0610のトップページ"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package_v0/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package_v0/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package_v0/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_package_v0/site.webmanifest">
-    <link rel="mask-icon" href="/favicon_package_v0/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#0D421F">
 </head>
 <body>
     <h1>KOCHAN0610</h1>
@@ -31,7 +22,7 @@
     <p>この動画は以前放送されていたAppleの日本オリジナルCMシリーズ「Macの向こうから」の新海誠監督版です。<br>新海誠監督のルーツや大切にしているところが紹介されていて、創作意欲が掻き立てられるような作品となっています。</p>
     <h3>yamaga-fc</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/J6qOE7MRQ40?si=n3ib3blZG7kRwCwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h4>信州ダービー2024煽りVTR</h4>
+    <h4><s>信州ダービー2024煽りVTR</s></h4>
     <p>結果は不甲斐ないもので、引き分けとなってしまいましたが、クラブとしての覚悟を表したビデオだと思います。<br>次のアウェイ戦は勝てるようにファン・サポーター、クラブ、選手が一体となって戦いましょう！<b>OneSoul!</b></p>
     <h2>Contact</h2>
     <p><a href="mailto:kokog0610@gmail.com?subject=【Github-main】">kokog0610@gmail.com</a>へ件名に【Github-main】をつけてメールを送信してください。</p>
